fix overflow issue

--- a/src/static/styles/main.styl
+++ b/src/static/styles/main.styl
@@ -7,6 +7,7 @@ html,head,body
 
 body
   font-family: Futura, helvetica, arial, sans-serif
+  overflow: hidden
 
 #main
   padding:0
